# StarSystem

./: CMakeLists.txt  README.md
include/: Stellar.hpp  SystemMap.hpp
src/: Stellar.cpp  SystemMap.cpp  main.cpp
